css: fixed paging buttons on Safari

--- a/imports/ui/components/navigation/navPaging.less
+++ b/imports/ui/components/navigation/navPaging.less
@@ -6,10 +6,11 @@
   padding: 0;
   margin: 0;
   white-space: nowrap;
+  .nextPage {
+    margin-left: 0.25em;
+  }
   span {
     display: inline-block;
-    padding-left: 0.25em;
-    // margin: 0.25em;
     a {
       padding: 0 0.25em;
     }
@@ -18,9 +19,7 @@
     a {
       cursor: pointer;
       color: @color-headerlink;
-      // background-color: @color-headerback;
-      background-color: magenta;
-      opacity: 0.9;
+      background-color: @color-headerback;
       user-select: none;
       box-shadow: @boxshadow-1;
     }
@@ -37,9 +36,7 @@
   .inactive {
     a {
       color: @color-headertext;
-      // background-color: @color-headerback;
-      background-color: magenta;
-      opacity: 0.9;
+      background-color: @color-headerback;
       box-shadow: none;
       transition: background-color 0.2s linear, box-shadow 0.2s linear;
       user-select: none;
