--- a/imports/ui/stylesheets/utils/typography.less
+++ b/imports/ui/stylesheets/utils/typography.less
@@ -4,15 +4,16 @@
 }
 @font-icons: 'eboyio';
 
-@font-big: 'Bodoni 72';
+@font-big: 'Bodoni 72', 'Times New Roman', Times, serif;
 // @font-big: 'Roboto Condensed';
+// @font-big: 'Garamond';
 @font-big-size: 3rem;
-@font-big-weight: 300;
+@font-big-weight: 400;
 @font-big-lineheight: 1em;
 
 @font-regular: 'Roboto';
 @font-regular-size: 1.4rem;
-@font-regular-weight: 200;
+@font-regular-weight: 400;
 @font-regular-lineheight: 1.2em;
 
 @font-meta: 'Roboto Mono';
